# langgraph-intro

./: .gitignore  PROJECT_STRUCTURE.md  README.md  env.example  pyproject.toml  studio_config.json
knowledge-base/: DOCUMENTATION_PLAN.md  README.md  TEMPLATES.md
knowledge-base/components/edges/: conditional-edges.md
knowledge-base/components/state/: README.md
knowledge-base/concepts/: README.md
knowledge-base/concepts/fundamentals/: conditional-edges.md  what-is-langgraph.md
knowledge-base/concepts/state-management/: README.md  messages-state.md  reducers.md  using-messages-as-state.md
knowledge-base/use-cases/workflows/: routing-workflows.md
plan/: COMPONENT_BREAKDOWN.md  DELIVERABLES_TRACKING.md  DETAILED_LEARNING_SCHEDULE.md
plan/modules/introduction/: README.md
plan/modules/introduction/tasks/: task-1-environment-setup.md  task-2-lesson-1-motivation.md  task-3-lesson-2-simple-graph.md  task-4-lesson-3-langgraph-studio.md  task-5-lesson-4-chain.md  task-6-lesson-5-router.md  task-7-lesson-6-agent.md  task-8-lesson-7-agent-memory.md
src/: __init__.py
src/modules/: __init__.py
src/modules/introduction/: __init__.py
src/modules/introduction/graphs/: __init__.py
src/modules/introduction/lessons/: __init__.py
src/modules/introduction/lessons/lesson-1-motivation/: __init__.py  advantages.md  comparison.md  integration_test_motivation.py  motivation_summary.md  test_extensibility.py  (+5 more)
src/modules/introduction/nodes/: __init__.py
src/modules/introduction/utils/: __init__.py
tests/: __init__.py  conftest.py  integration_test.py  test_basic.py
(+10 files in other folders)
